--- a/templates/post_index.html
+++ b/templates/post_index.html
@@ -113,9 +113,7 @@
         src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""
         style="max-width: 1em;max-height:1em;margin-left: .2em;"><img
         src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""
-        style="max-width: 1em;max-height:1em;margin-left: .2em;">
-      <!-- <p>© {{ now.year }} {{ name }}. All rights reserved.</p> -->
-    </div>
+        style="max-width: 1em;max-height:1em;margin-left: .2em;"></div>
   </footer>
 </body>
 
