--- a/templates/index.html
+++ b/templates/index.html
@@ -1,287 +1,255 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Website description -->
-    <title>{{ website_title }}</title>
-    <meta name="description" content="{{ name }} - {{ summary }}" />
-    <meta name="author" content="{{ name }}" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Open Graph Tags -->
-    <meta property="og:title" content="{{ name }}" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="{{ base_url }}/index.html" />
-    <meta property="og:image" content="{{ base_url }}/{{ image_path }}" />
-    <meta property="og:image:alt" content="{{ name }} Profile Image" />
+  <!-- Website description -->
+  <title>{{ website_title }}</title>
+  <meta name="description" content="{{ name }} - {{ summary }}" />
+  <meta name="author" content="{{ name }}" />
 
-    <!-- Icons -->
-    <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon.png" />
-    <link rel="icon" size="32x32" href="/img/favicon-32x32.png" />
-    <link rel="icon" size="16x16" href="/img/favicon-16x16.png" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="{{ name }}" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="{{ base_url }}/index.html" />
+  <meta property="og:image" content="{{ base_url }}/{{ image_path }}" />
+  <meta property="og:image:alt" content="{{ name }} Profile Image" />
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="/css/modern_normalize.css" />
-    <link rel="stylesheet" href="/css/html5bp.css" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/sidenav.css" />
+  <!-- Icons -->
+  <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon.png" />
+  <link rel="icon" size="32x32" href="/img/favicon-32x32.png" />
+  <link rel="icon" size="16x16" href="/img/favicon-16x16.png" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <!-- Theme -->
-    <meta name="theme-color" content="#fafafa" />
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="/css/modern_normalize.css" />
+  <link rel="stylesheet" href="/css/html5bp.css" />
+  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/sidenav.css" />
 
-    <!-- Content Security Policy: Update if adding external sources (e.g., Google Fonts, Bootstrap CDN, analytics, etc). -->
-    <!-- style-src, script-src, img-src: separate sources with spaces -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content=" default-src 'self'; "
-    />
-  </head>
+  <!-- Theme -->
+  <meta name="theme-color" content="#fafafa" />
 
-  <body>
-    <!-- Header -->
-    <header class="page-header">
-      <div class="container">
-        <div class="header-top flex-responsive">
-          {% if image_path %}
-          <img
-            class="header-image"
-            width="256"
-            height="256"
-            src="{{ image_path }}"
-            alt="{{ name }} Profile Image"
-          />
-          {% endif %}
-          <div class="header-info">
-            <h1>
-              {{ first_name }} {% if nickname %} ({{ nickname }}) {% endif %} {{
-              last_name }}
-            </h1>
-            {% if label %}
-            <h2 class="header-label">{{ label }}</h2>
-            {% endif %} {% if contact.email or contact.phone or contact.location
-            %}
-            <address>
-              <ul class="inline-list flex-responsive">
-                {% if contact.email %}
-                <li>
-                  <a href="mailto:{{ contact.email }}">{{ contact.email }}</a>
-                </li>
-                {% endif %} {% if contact.location %}
-                <li>{{ contact.location }}</li>
-                {% endif %}
-              </ul>
-            </address>
-            {% endif %} {% if social_media_links %}
+  <!-- Content Security Policy: Update if adding external sources (e.g., Google Fonts, Bootstrap CDN, analytics, etc). -->
+  <!-- style-src, script-src, img-src: separate sources with spaces -->
+  <meta http-equiv="Content-Security-Policy" content=" default-src 'self'; " />
+</head>
+
+<body>
+  <!-- Header -->
+  <header class="page-header">
+    <div class="container">
+      <div class="header-top flex-responsive">
+        {% if image_path %}
+        <img class="header-image" width="256" height="256" src="{{ image_path }}" alt="{{ name }} Profile Image" />
+        {% endif %}
+        <div class="header-info">
+          <h1>
+            {{ first_name }} {% if nickname %} ({{ nickname }}) {% endif %} {{
+            last_name }}
+          </h1>
+          {% if label %}
+          <h2 class="header-label">{{ label }}</h2>
+          {% endif %} {% if contact.email or contact.phone or contact.location
+          %}
+          <address>
             <ul class="inline-list flex-responsive">
-              {% for link in social_media_links %}
+              {% if contact.email %}
               <li>
-                <a
-                  href="{{ link.url }}"
-                  rel="noopener noreferrer"
-                  aria-label="{{ link.label }}"
-                  class="link-with-icon"
-                >
-                  {% if link.svg_data %}{{ link.svg_data | safe }}{% endif %} {{
-                  link.label }}
-                </a>
+                <a href="mailto:{{ contact.email }}">{{ contact.email }}</a>
               </li>
-              {% endfor %}
+              {% endif %} {% if contact.location %}
+              <li>{{ contact.location }}</li>
+              {% endif %}
             </ul>
-            {% endif %} {% if summary %}
-            <p class="header-summary">{{ summary }}</p>
-            {% endif %}
-          </div>
+          </address>
+          {% endif %} {% if social_media_links %}
+          <ul class="inline-list flex-responsive">
+            {% for link in social_media_links %}
+            <li>
+              <a href="{{ link.url }}" rel="noopener noreferrer" aria-label="{{ link.label }}" class="link-with-icon">
+                {% if link.svg_data %}{{ link.svg_data | safe }}{% endif %} {{
+                link.label }}
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
+          {% endif %} {% if summary %}
+          <p class="header-summary">{{ summary }}</p>
+          {% endif %}
         </div>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <!-- Resume body -->
-    <div class="page-content">
-      <div class="container">
-        <main>
-          {% if current_work %}
+  <!-- Resume body -->
+  <div class="page-content">
+    <div class="container">
+      <main>
+        {% if current_work %}
+        <section>
+          <h2 class="section-heading">Current Work Experience</h2>
+          {% for job in current_work %}
           <section>
-            <h2 class="section-heading">Current Work Experience</h2>
-            {% for job in current_work %}
-            <section>
-              <h3>
-                <span class="left"
-                  >{% if job.url %}
-                  <a href="{{ job.url }}">{{ job.company }}</a> {% else %} {{
-                  job.company }} {% endif %}</span
-                >
-                <span class="section-label right">{{ job.location }}</span>
-                <br />
-              </h3>
-              <p>
-                <span class="section-label left"
-                  ><i>{{ job.position }}</i></span
-                >
-                {% if job.start_date and job.end_date %}
-                <span class="section-label right"
-                  >{{ job.start_date }} - {{ job.end_date }}</span
-                >
-                {% endif %}
-              </p>
+            <h3>
+              <span class="left">{% if job.url %}
+                <a href="{{ job.url }}">{{ job.company }}</a> {% else %} {{
+                job.company }} {% endif %}</span>
+              <span class="section-label right">{{ job.location }}</span>
               <br />
-              {% if job.highlights %}
-              <ul>
-                {% for highlight in job.highlights %}
-                <li>{{ highlight }}</li>
-                {% endfor %}
-              </ul>
+            </h3>
+            {% for position in job.positions %}
+            <p>
+              <span class="section-label left"><i>{{ position.title }}</i></span>
+              {% if position.start_date != position.end_date %}
+              <span class="section-label right">{{ position.start_date }} - {{ position.end_date }}</span>
+              {% else %}<span class="section-label right">{{ position.start_date }}</span>
               {% endif %}
-            </section>
+            </p><br />
             {% endfor %}
+            {% if job.highlights %}
+            <ul>
+              {% for highlight in job.highlights %}
+              <li>{{ highlight }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
           </section>
-          {% endif %} {% if relevant_work %}
+          {% endfor %}
+        </section>
+        {% endif %} {% if relevant_work %}
+        <section>
+          <h2 class="section-heading">Relevant Work Experience</h2>
+          {% for job in relevant_work %}
           <section>
-            <h2 class="section-heading">Relevant Work Experience</h2>
-            {% for job in relevant_work %}
-            <section>
-              <h3>
-                <span class="left"
-                  >{% if job.url %}
-                  <a href="{{ job.url }}">{{ job.company }}</a> {% else %} {{
-                  job.company }} {% endif %}</span
-                >
-                <span class="section-label right">{{ job.location }}</span>
-                <br />
-              </h3>
-              <p>
-                <span class="section-label left"
-                  ><i>{{ job.position }}</i></span
-                >
-                {% if job.start_date and job.end_date %}
-                <span class="section-label right"
-                  >{{ job.start_date }} - {{ job.end_date }}</span
-                >
-                {% endif %}
-              </p>
+            <h3>
+              <span class="left">{% if job.url %}
+                <a href="{{ job.url }}">{{ job.company }}</a> {% else %} {{
+                job.company }} {% endif %}</span>
+              <span class="section-label right">{{ job.location }}</span>
               <br />
-              {% if job.highlights %}
-              <ul>
-                {% for highlight in job.highlights %}
-                <li>{{ highlight }}</li>
-                {% endfor %}
-              </ul>
+            </h3>
+            {% for position in job.positions %}
+            <p>
+              <span class="section-label left"><i>{{ position.title }}</i></span>
+              {% if position.start_date != position.end_date %}
+              <span class="section-label right">{{ position.start_date }} - {{ position.end_date }}</span>
+              {% else %}<span class="section-label right">{{ position.start_date }}</span>
               {% endif %}
-            </section>
+            </p><br />
             {% endfor %}
+            {% if job.highlights %}
+            <ul>
+              {% for highlight in job.highlights %}
+              <li>{{ highlight }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
           </section>
-          {% endif %}
-        </main>
+          {% endfor %}
+        </section>
+        {% endif %}
+      </main>
 
-        <!-- Sidebar -->
-        <aside>
-          {% if education %}
+      <!-- Sidebar -->
+      <aside>
+        {% if education %}
+        <section>
+          <h2 class="section-heading">Education</h2>
+          {% for edu in education %}
           <section>
-            <h2 class="section-heading">Education</h2>
-            {% for edu in education %}
-            <section>
-              <h3>
-                {% if edu.url %}
-                <a href="{{ edu.url }}">{{ edu.institution }}</a>
-                {% else %} {{ edu.institution }} {% endif %}
-              </h3>
-              {% if edu.graduation_date %}
-              <p class="section-label">{{ edu.graduation_date }}</p>
-              {% endif %} {% if edu.degree %}
-              <ul>
-                <li>{{ edu.degree }}</li>
-                {% if edu.gpa %}
-                <li>GPA: {{ edu.gpa }}/4.0</li>
-                {% endif %}
-              </ul>
-              {% endif %} {% if edu.honors %}
-              <h4>Honors</h4>
-              <ul>
-                {% for hon in edu.honors %}
-                <li>{{ hon }}</li>
-                {% endfor %}
-              </ul>
+            <h3>
+              {% if edu.url %}
+              <a href="{{ edu.url }}">{{ edu.institution }}</a>
+              {% else %} {{ edu.institution }} {% endif %}
+            </h3>
+            {% if edu.graduation_date %}
+            <p class="section-label">{{ edu.graduation_date }}</p>
+            {% endif %} {% if edu.degree %}
+            <ul>
+              <li>{{ edu.degree }}</li>
+              {% if edu.gpa %}
+              <li>GPA: {{ edu.gpa }}/4.0</li>
               {% endif %}
-            </section>
-            {% endfor %}
+            </ul>
+            {% endif %} {% if edu.honors %}
+            <h4>Honors</h4>
+            <ul>
+              {% for hon in edu.honors %}
+              <li>{{ hon }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
           </section>
-          {% endif %} {% if skills %}
-          <section>
-            <h2 class="section-heading">Technical Proficiencies</h2>
-            <ul class="unstyled-list">
-              {% for skill in skills %}
-              <li>
-                <h3>{{ skill.name }}</h3>
-                <div class="skill-bar">
-                  <div
-                    class="skill-bar-fill w-{{ skill.proficiency }}"
-                    role="meter"
-                    aria-valuenow="{{ skill.proficiency }}"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  >
-                    <span class="skill-bar-label"
-                      >{{ skill.proficiency_label }}</span
-                    >
-                  </div>
+          {% endfor %}
+        </section>
+        {% endif %} {% if skills %}
+        <section>
+          <h2 class="section-heading">Technical Proficiencies</h2>
+          <ul class="unstyled-list">
+            {% for skill in skills %}
+            <li>
+              <h3>{{ skill.name }}</h3>
+              <div class="skill-bar">
+                <div class="skill-bar-fill w-{{ skill.proficiency }}" role="meter"
+                  aria-valuenow="{{ skill.proficiency }}" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill-bar-label">{{ skill.proficiency_label }}</span>
                 </div>
-              </li>
-              {% endfor %}
-            </ul>
-          </section>
-          {% endif %} {% if languages %}
-          <section>
-            <h2 class="section-heading">Languages</h2>
-            <ul class="unstyled-list">
-              {% for lang in languages %}
-              <li>
-                <h3>{{ lang.language }}</h3>
-                <p class="section-label">{{ lang.fluency }}</p>
-              </li>
-              {% endfor %}
-            </ul>
-          </section>
-          {% endif %} {% if interests %}
-          <section>
-            <h2 class="section-heading">Interests</h2>
-            {% for interest in interests %}
-            <section>
-              <h3>{{ interest.name }}</h3>
-              {% if interest.summary %}
-              <p>{{ interest.summary }}</p>
-              {% endif %} {% if interest.images %}
-              <div class="gallery side-gallery">
-                {% for img in interest.images %}
-                <figure>
-                  <img
-                    width="600"
-                    height="400"
-                    src="{{ img.img_path }}"
-                    alt="{{ img.caption }}"
-                  />
-                  <figcaption>{{ img.caption }}</figcaption>
-                </figure>
-                {% endfor %}
               </div>
-              {% endif %}
-            </section>
+            </li>
             {% endfor %}
+          </ul>
+        </section>
+        {% endif %} {% if languages %}
+        <section>
+          <h2 class="section-heading">Languages</h2>
+          <ul class="unstyled-list">
+            {% for lang in languages %}
+            <li>
+              <h3>{{ lang.language }}</h3>
+              <p class="section-label">{{ lang.fluency }}</p>
+            </li>
+            {% endfor %}
+          </ul>
+        </section>
+        {% endif %} {% if interests %}
+        <section>
+          <h2 class="section-heading">Interests</h2>
+          {% for interest in interests %}
+          <section>
+            <h3>{{ interest.name }}</h3>
+            {% if interest.summary %}
+            <p>{{ interest.summary }}</p>
+            {% endif %} {% if interest.images %}
+            <div class="gallery side-gallery">
+              {% for img in interest.images %}
+              <figure>
+                <img width="600" height="400" src="{{ img.img_path }}" alt="{{ img.caption }}" />
+                <figcaption>{{ img.caption }}</figcaption>
+              </figure>
+              {% endfor %}
+            </div>
+            {% endif %}
           </section>
-          {% endif %}
-        </aside>
-      </div>
+          {% endfor %}
+        </section>
+        {% endif %}
+      </aside>
     </div>
+  </div>
 
-    <div id="mySidenav" class="sidenav">
-      <a href="/index.html" id="home">Home</a>
-      <a href="/posts/index.html" id="blog">Blog</a>
-      <a href="/resume.pdf" id="resume">Resume</a>
-      <a href="/pets.html" id="pets">Pets</a>
-    </div>
+  <div id="mySidenav" class="sidenav">
+    <a href="/index.html" id="home">Home</a>
+    <a href="/posts/index.html" id="blog">Blog</a>
+    <a href="/resume.pdf" id="resume">Resume</a>
+    <a href="/pets.html" id="pets">Pets</a>
+  </div>
 
-    <footer class="page-footer">
-      <p>© {{ now.year }} {{ name }}. All rights reserved.</p>
-    </footer>
-  </body>
+  <footer class="page-footer">
+    <p>© {{ now.year }} {{ name }}. All rights reserved.</p>
+  </footer>
+</body>
+
 </html>
